tests/ui/attributes/attr-on-mac-call.stderr
error: `#[sanitize]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:77:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/attr-on-mac-call.rs:106:12
   |
LL |     #[repr(simd)]
   |            ^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(repr_simd)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `#[repr(simd)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:106:5
   |
LL |     #[repr(simd)]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(simd)]` can only be applied to structs
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error[E0658]: `repr(complex)` is experimental
  --> $DIR/attr-on-mac-call.rs:110:12
   |
LL |     #[repr(complex)]
   |            ^^^^^^^
   |
   = note: see issue #154023 <https://github.com/rust-lang/rust/issues/154023> for more information
   = help: add `#![feature(repr_complex)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `#[repr(complex)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:110:5
   |
LL |     #[repr(complex)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[repr(complex)]` can only be applied to structs
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![register_tool]`
  --> $DIR/attr-on-mac-call.rs:114:5
   |
LL |     #[register_tool(xyz)]
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: this attribute does not have an `!`, which means it is applied to this macro call
  --> $DIR/attr-on-mac-call.rs:116:5
   |
LL |     unreachable!();
   |     ^^^^^^^^^^^^^^

warning: `#[export_name]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:8:5
   |
LL |     #[export_name = "x"]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute
note: the lint level is defined here
  --> $DIR/attr-on-mac-call.rs:3:9
   |
LL | #![warn(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

warning: `#[naked]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:11:5
   |
LL |     #[unsafe(naked)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[naked]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[track_caller]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:14:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^
   |
   = help: `#[track_caller]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[used]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:17:5
   |
LL |     #[used]
   |     ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[target_feature]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:20:5
   |
LL |     #[target_feature(enable = "x")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[target_feature]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[deprecated]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:23:5
   |
LL |     #[deprecated]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[deprecated]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[inline]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:26:5
   |
LL |     #[inline]
   |     ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[link_name]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:29:5
   |
LL |     #[link_name = "x"]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_name]` can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[link_section]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:32:5
   |
LL |     #[link_section = "__TEXT,__text"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_section]` can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[link_ordinal]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:35:5
   |
LL |     #[link_ordinal(42)]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_ordinal]` can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[non_exhaustive]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:38:5
   |
LL |     #[non_exhaustive]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[non_exhaustive]` can be applied to data types and enum variants
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[proc_macro]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:41:5
   |
LL |     #[proc_macro]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[proc_macro]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[cold]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:44:5
   |
LL |     #[cold]
   |     ^^^^^^^
   |
   = help: `#[cold]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[no_mangle]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:47:5
   |
LL |     #[no_mangle]
   |     ^^^^^^^^^^^^
   |
   = help: `#[no_mangle]` can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[deprecated]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:50:5
   |
LL |     #[deprecated]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[deprecated]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[automatically_derived]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:53:5
   |
LL |     #[automatically_derived]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[automatically_derived]` can only be applied to trait impl blocks
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[macro_use]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:56:5
   |
LL |     #[macro_use]
   |     ^^^^^^^^^^^^
   |
   = help: `#[macro_use]` can be applied to extern crates and modules
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[must_use]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:59:5
   |
LL |     #[must_use]
   |     ^^^^^^^^^^^
   |
   = help: `#[must_use]` can be applied to data types, functions, and traits
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[no_implicit_prelude]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:62:5
   |
LL |     #[no_implicit_prelude]
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[no_implicit_prelude]` can be applied to crates and modules
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[path]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:65:5
   |
LL |     #[path = ""]
   |     ^^^^^^^^^^^^
   |
   = help: `#[path]` can only be applied to modules
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[ignore]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:68:5
   |
LL |     #[ignore]
   |     ^^^^^^^^^
   |
   = help: `#[ignore]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[should_panic]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:71:5
   |
LL |     #[should_panic]
   |     ^^^^^^^^^^^^^^^
   |
   = help: `#[should_panic]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[link_name]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:74:5
   |
LL |     #[link_name = "x"]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_name]` can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[repr()]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:81:5
   |
LL |     #[repr()]
   |     ^^^^^^^^^
   |
   = help: `#[repr()]` can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: unused attribute
  --> $DIR/attr-on-mac-call.rs:81:5
   |
LL |     #[repr()]
   |     ^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect

warning: `#[repr(u8)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:86:5
   |
LL |     #[repr(u8)]
   |     ^^^^^^^^^^^
   |
   = help: `#[repr(u8)]` can only be applied to enums
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[repr(align(...))]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:90:5
   |
LL |     #[repr(align(8))]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr(align(...))]` can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[repr(packed)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:94:5
   |
LL |     #[repr(packed)]
   |     ^^^^^^^^^^^^^^^
   |
   = help: `#[repr(packed)]` can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[repr(C)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:98:5
   |
LL |     #[repr(C)]
   |     ^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: `#[repr(Rust)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:102:5
   |
LL |     #[repr(Rust)]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: aborting due to 6 previous errors; 30 warnings emitted

For more information about this error, try `rustc --explain E0658`.
